// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Actions Circular Payload 1`] = `
<button
  class="css-1yjiefr"
>
  Circular Payload
</button>
`;

exports[`Storyshots Addons|Actions Decorated Action 1`] = `
<button
  class="css-1yjiefr"
>
  First Argument
</button>
`;

exports[`Storyshots Addons|Actions Function Name 1`] = `
<button
  class="css-1yjiefr"
>
  Action.name: fnName
</button>
`;

exports[`Storyshots Addons|Actions Hello World 1`] = `
<button
  class="css-1yjiefr"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Reserved keyword as name 1`] = `
<button
  class="css-1yjiefr"
>
  Delete
</button>
`;
